# transnet-generator

./: .gitignore  LICENCE  README.md  pyproject.toml
src/transnet_generator/: __init__.py  generator.py
